feat: async task send verification email
