# gapi/rpc_verify_email.go
@@ -1,0 +1,44 @@
+package gapi
+
+import (
+	"context"
+
+	db "github.com/Hypersus/simplebank/db/sqlc"
+	"github.com/Hypersus/simplebank/pb"
+	"github.com/Hypersus/simplebank/val"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) VerifyEmail(ctx context.Context, req *pb.VerifyEmailRequest) (*pb.VerifyEmailResponse, error) {
+	violations := validateVerifyEmailRequest(req)
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
+
+	txResult, err := server.store.VerifyEmailTx(ctx, db.VerifyEmailTxParams{
+		EmailId:    req.GetEmailId(),
+		SecretCode: req.GetSecretCode(),
+	})
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to verify email")
+	}
+
+	rsp := &pb.VerifyEmailResponse{
+		IsVerified: txResult.User.IsEmailVerified,
+	}
+	return rsp, nil
+}
+
+func validateVerifyEmailRequest(req *pb.VerifyEmailRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := val.ValidateEmailId(req.GetEmailId()); err != nil {
+		violations = append(violations, fieldViolation("email_id", err))
+	}
+
+	if err := val.ValidateSecretCode(req.GetSecretCode()); err != nil {
+		violations = append(violations, fieldViolation("secret_code", err))
+	}
+
+	return violations
+}
